compliance with google. crashlytics un necessaray code removal. forced crash removal and merge of code of other developer